--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,15 @@
 cmake_minimum_required( VERSION 3.0 )
 project( GlobeViewer )
 
-set( CMAKE_CXX_STANDARD 14)
+set( CMAKE_CXX_STANDARD 17)
 set( CMAKE_CXX_STANDARD_REQUIRED ON )
 if ( MSVC )
-    add_compile_options( "/std:c++14" )
+    add_compile_options( "/std:c++17" )
 else()
-    add_compile_options( -std=c++14 )
+    add_compile_options( -std=c++17 )
 endif()
 
-option( BUILD_EXAMPLES OFF )
+option( BUILD_EXAMPLES ON )
 
 add_subdirectory( lib )
 
